--- a/books.html
+++ b/books.html
@@ -18,7 +18,7 @@
 <body>
     <h2>Some of My Favorite Books</h2>
     <p>
-        My favorite book, <i>Normal People</i>, is primarily a character study. This aligns a lot with my psychology majors, as the book examines two people and their relationship spanning over eight years. 
+        My favorite book, <i>Normal People</i>, is primarily a character study. This aligns a lot with my psychology major, as the book examines two people and their relationship spanning over eight years. 
     </p>
     <ol>
         <li>Normal People by Sally Rooney</li>
